# searchcopy

./: .changelog  index.html  package-lock.json  package.json  release.sh  searchcopy.jks  vite.config.js
.github/workflows/: release.yml
src/: App.jsx
src-tauri/: .changelog  Cargo.toml  cargo_patch.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: giga.rs  lib.rs  updater.rs
ui/: index.html  widget.html
